test/invalid_instruction.err
ERROR: line: 4, col: 1
"asdf" is not a valid instruction.
