test/invalid_instruction.s
# Invalid instruction
mov r0, r1
not r0, r0
asdf r0, r1
mov r1, r0
